--- a/packages/app/frontend/tsconfig.json
+++ b/packages/app/frontend/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.frontend.tsbuildinfo",
-    "target": "es2020",
-    "lib": ["es2020", "dom"],
+    "target": "esnext",
+    "lib": ["esnext", "dom"],
     "jsx": "react-jsx",
     "module": "esnext",
     "moduleResolution": "bundler",
