--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,7 +2,7 @@
     "name": "app",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --mode=development",
         "build": "tsc -b && vite build",
         "deploy:stg": "vite build --mode=staging && wrangler --env=staging deploy",
         "deploy:prod": "vite build --mode=production && wrangler --env=production deploy"
